[package]
name = "pie_mixer"
version = "0.1.0"
edition = "2021"
authors = ["Noah Kruiper"]
rust-version = "1.93"
description = "Digital mixer for Raspberry Pi 4"
readme = "README.md"
license = "GPL-2.0-or-later"
repository = "https://github.com/xenago/pie_mixer"

# Reduce size when building for release
[profile.release]
strip = true  # Do not include crash/debug symbols
lto = true  # Perform link-time optimization
codegen-units = 1  # Use a single thread
panic = "abort"  # Don't unwind callstack

# Default development debug build
[profile.dev]
lto = true

[dependencies]
anyhow = "1.0.100"
pipewire = "0.9.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
